2002-07-24	Joel Sherrill <joel@OARcorp.com>

	* sys/select.h: Add a prototype of select() to avoid warnings.
	In particular a C++ application using select() required a prototype.

2002-07-24	Joel Sherrill <joel@OARcorp.com>

	* Makefile.am, libc/res_send.c: Do not install or use <poll.h>
	since RTEMS does not support it.
2002-07-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* kern/Makefile.am: Use .$(OBJEXT) instead of .o.
	* lib/Makefile.am: Ditto.
	* libc/Makefile.am: Ditto.
	* net/Makefile.am: Ditto.
	* netinet/Makefile.am: Ditto.
	* nfs/Makefile.am: Ditto.
	* rtems/Makefile.am: Ditto.
	* wrapup/Makefile.am: Ditto.

2002-07-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* kern/Makefile.am: Eliminate LIBNAME.
	* lib/Makefile.am: Ditto.
	* libc/Makefile.am: Ditto.
	* net/Makefile.am: Ditto.
	* netinet/Makefile.am: Ditto.
	* nfs/Makefile.am: Ditto.
	* rtems/Makefile.am: Ditto.
	* wrapup/Makefile.am: Use project_libdir instead of
	$(PROJECT_RELEASE)/lib.

2002-07-17	Jay Monkman <jtm@smoothsmoothie.com>

	* netinet/in.h, netinet/ip.h, netinet/ip_var.h, netinet/tcp.h:
	Modified to added packed attribute.o

2002-07-05	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: RTEMS_TOP(../..).

2002-07-01	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove RTEMS_PROJECT_ROOT.

2002-06-27	Thomas Doerfler <Thomas.Doerfler@imd-systems.de>

	* Addition of a ftp client filesystem, comparable to the tftp one.
	* lib/ftpfs.c, rtems/ftpfs.h: New files.
	* lib/Makefile.am, rtems/Makefile.am: Modified to reflect above.

2002-06-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Use AC_CONFIG_AUX_DIR(../..).
	Add AC_PROG_RANLIB.

2002-06-26	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Don't preinstall libnetworking.a.

2002-06-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Remove commented out net-apps.

2002-06-17	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* arpa/Makefile.am: Include $(top_srcdir)/../automake/*.am.