@@ -41,14 +41,18 @@
  *  Try to use a CPU specific version, then punt to the portable C one.
  */
 
-#if (defined(__GNUC__) && (defined(__mc68000__) || defined(__m68k__)))
 
-#include "in_cksum_m68k.c"
+#if (defined(__GNUC__) && defined(__arm__))
+
+#include "in_cksum_arm.c"
 
 #elif (defined(__GNUC__) && defined(__i386__))
 
 #include "in_cksum_i386.c"
 
+#elif (defined(__GNUC__) && (defined(__mc68000__) || defined(__m68k__)))
+
+#include "in_cksum_m68k.c"
 #elif (defined(__GNUC__) && defined(__PPC__))
 
 #include "in_cksum_powerpc.c"
